<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_league"
        android:icon="@drawable/ic_home"
        android:title="League" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="Search" />

    <item
        android:id="@+id/nav_event"
        android:icon="@drawable/match"
        android:title="Event" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="Favorite"
        />
</menu>