<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.search.SearchEventFragment">

    <SearchView
        android:id="@+id/searchMatch"
        android:layout_width="match_parent"
        android:queryHint="@string/searching"
        android:contentDescription="@string/search"
        android:focusableInTouchMode="false"
        android:touchscreenBlocksFocus="false"
        android:focusable="false"
        app:showAsAction="always"
        app:iconifiedByDefault="true"
        android:iconifiedByDefault="false"
        android:layout_height="50dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="60dp"
        android:padding="8dp"
        android:id="@+id/searchMatchRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</FrameLayout>