...
                <!-- home -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/awayTeamBadge"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        />

                    <TextView
...
